css/styles.css
/* Set page resets and properties that apply to whole page*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 1.2rem;
}

/* Set variables to reuse instead of hardcoding */
:root {
    --panel-padding-tb: 30px;
    --panel-padding-lr: 50px;
    --side-panel-bg-color: #d9d9d9;
    --main-container-bg-color: #f3f1f2;
    --side-panel-input-color: #f1e8e9;
    --main-container-input-color: #c0baba;
    --canvas-color: #e6dada;
    --main-font-family: 'Nunito', system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    --page-btm-padding: 8px;
    --input-height: 31px;
    --canvas-container-gap: 10px;
    --insert-delete-reserve-space: calc(var(--input-height) + var(--canvas-container-gap));
}

/* SET LAYOUT, SIZING AND FONT PROPERTIES*/
canvas:first-child {
    margin-top: var(--insert-delete-reserve-space);
}

body {
    display: flex;
    font-family: var(--main-font-family);
}

button {
    font-family: var(--main-font-family);
    border: none;
    border-radius: 3px;
    padding: 0.5rem 1.7rem;
}

button:hover {
    transform: scale(1.1);
}

#canvas {
    background-color: var(--canvas-color);
}

/* .insert-delete-container li {
    display: none;
}  */

.visible {
    visibility: visible;
}

ul {
    list-style: none;
}

.side-panel, .main-container, .canvas-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.canvas-container {
    gap: var(--canvas-container-gap);
}

.main-container, .side-panel {
    padding: var(--panel-padding-tb) var(--panel-padding-lr) var(--page-btm-padding) var(--panel-padding-lr);
}

.side-panel {
    flex: auto;
    justify-content: space-between;
}

.main-container {
    flex: 2 1 auto;
}

.insert-delete-container {
    align-self: flex-start;
}

input {
    width: 100px;
    border: none;
    font-size: 0.9rem;
    height: var(--input-height);
    padding: 0px 10px;
}

canvas + section {
    align-self: flex-end;
}

.custom-tree-btn {
    margin-top: auto;
}

.random-tree-btn {
    margin-top: 25px;
}

.parameters-container li {
    /* display: flex; */
    justify-content: space-between;
    gap: 5px;
}

.label-error {
    color: red;
}

input#num-nodes {
    margin-left: auto;
}

.parameters-container li:first-child ~ li {
    margin-top: 10px;
}

label {
    margin: 0px 6px 0px 0px;
}

.insert-delete-container li:first-child ~ li {
    margin-left: 20px;
}

/* Set color themes onto page */

.side-panel {
    background-color: var(--side-panel-bg-color);
}

.side-panel button, .side-panel input {
    background-color: var(--side-panel-input-color);
}

.main-container {
    background-color: var(--main-container-bg-color);
}

.main-container input, .main-container button {
    background-color: var(--main-container-input-color);
}

.invisible {
    display: none;
}

